  * Joey Hess
    - English fixes.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Oliver Elphick
    - More template polishing.
  * Verok Istvan
    - Updated Hungarian translation
  * Claus Hindsgaul
    - Updated Danish translation.
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Giuseppe Sacco
    - add italian translation by Filippo Giunchedi

 -- Joey Hess <joeyh@debian.org>  Mon, 15 Dec 2003 12:40:51 -0500

netcfg (0.34) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Verok Istvan
    - Initial Hungarian translation
  * Denis Barbier
    - Unfuzzy French translation
  * Gaudenz Steinlin
    - add new combined dhcp and static netcfg
      (udeb netcfg)
    - implement joey's dhcp idea
      (wait 10s and then ask if we should try 
       longer)
    - move common code to netcfg-common.c
    - improve state machines

 -- Gaudenz Steinlin <gaudenz@soziologie.ch>  Thu, 11 Dec 2003 12:08:48 +0100

netcfg (0.33) unstable; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Steinar H. Gunderson
    - Update nb.po.
  * Konstantinos Margaritis
    - Initial Greek translation (el.po)
  * Christian Perrier
    - Refined and standardized templates. Closes: #219633
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Axel Noetzold
    - Remove spurious space from the netcfg/no_interfaces template.
      Closes: #221203
  * Safir Šećerović
    - Update Bosnian translation (bs.po)
  * Bastian Blank
    - remove dependency against different dhcp clients.
  * Jordi Mallach
    - Add Catalan translation (ca.po).
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Ilgiz Kalmetev
    - Update Russian translation. Closes: #221824.
  * Joey Hess
    - Fix tense in netcfg/error template.
  * Thiemo Seufer