@@ -20,8 +20,10 @@ netcfg (0.35) unstable; urgency=low
     - Updated Greek translation (el.po)
   * Giuseppe Sacco
     - add italian translation by Filippo Giunchedi
+  * Gaudenz Steinlin
+    - write to prebaseconfig.d/40netcfg in netcfg
 
- -- Joey Hess <joeyh@debian.org>  Mon, 15 Dec 2003 12:40:51 -0500
+ -- Gaudenz Steinlin <gaudenz@soziologie.ch>  Wed, 17 Dec 2003 01:11:31 +0100
 
 netcfg (0.34) unstable; urgency=low
 
